# cell-cycle-scivision

./: .gitignore  README.md  setup.cfg
.scivision/: data.yaml  model.yaml
cell_cycle_classifier/: model.py
tests/: conftest.py  test_datasource.py
